<resources>
    <!--  Main Activity  -->
    <!--  Main Fragment  -->
    <string name="app_name">Shopping List</string>
    <string name="login_btn">Login</string>
    <string name="register_btn">Register</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!--  Login Fragment  -->
    <string name="username_hint">Username</string>
    <string name="password_hint">Password</string>
    <string name="invalid_credentials">Invalid credentials</string>
    <!--  Register Fragment  -->
    <string name="email">Email</string>

    <!--  Welcome Activity  -->
    <string name="welcome">WELCOME</string>
    <string name="new_list">New list</string>
    <string name="see_my_lists">See my lists</string>
    <string name="see_shared_lists">See shared lists</string>
    <string name="see_all_lists">See all lists</string>
    <string name="alert_dialog_title">Add new list</string>
    <string name="alert_dialog_message">Are you sure that you want to create new list?</string>

    <!-- ShoppingList list item -->
    <string name="title_label">Title:</string>
    <string name="shared_label">Shared:</string>

    <!--  NewList Activity  -->
    <string name="list_title_hint">List title</string>
    <string name="save_btn">Save</string>
    <string name="share_list">Do you want to share this list:</string>
    <string name="rb_yes">Yes</string>
    <string name="rb_no">No</string>

    <!--  ShowList Activity  -->
    <string name="article_name_hint">Article name</string>
    <string name="add_btn">Add</string>
    <string name="refresh_btn">Refresh</string>
    <string name="name_validation_error">Please input article name</string>
</resources>