<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@color/background">

    <EditText
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:hint="@string/username_hint"
        android:textColorHint="@color/gray"
        android:backgroundTint="@color/gray"
        android:textColor="@color/white"
        android:layout_marginBottom="10dp"
        android:id="@+id/etUsername"/>

    <EditText
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        android:textColorHint="@color/gray"
        android:backgroundTint="@color/gray"
        android:textColor="@color/white"
        android:layout_marginBottom="20dp"
        android:id="@+id/etPassword"/>

    <Button
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/login_btn"
        android:textColor="@color/black"
        android:backgroundTint="@color/trinity"
        android:id="@+id/btnLogin"/>

</LinearLayout>