<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@color/background">


        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingLeft="30dp"
            android:paddingRight="30dp">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/username_hint"
                android:textSize="20dp"
                android:textColor="@color/white"
                android:layout_marginBottom="20dp"
                android:id="@+id/tvUsername" />

            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@color/gray"
                android:textColor="@color/white"
                android:layout_marginBottom="20dp"
                android:id="@+id/etUsername"/>
        </LinearLayout>

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingLeft="30dp"
            android:paddingRight="30dp">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/email"
                android:textSize="20dp"
                android:textColor="@color/white"
                android:layout_marginBottom="20dp"
                android:id="@+id/tvEmail"/>
            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@color/gray"
                android:textColor="@color/white"
                android:layout_marginBottom="20dp"
                android:id="@+id/etEmail"/>
        </LinearLayout>

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingLeft="30dp"
            android:paddingRight="30dp">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/password_hint"
                android:textSize="20dp"
                android:textColor="@color/white"
                android:layout_marginBottom="20dp"
                android:id="@+id/tvPassword"/>
            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@color/gray"
                android:textColor="@color/white"
                android:layout_marginBottom="20dp"
                android:inputType="textPassword"
                android:id="@+id/etPassword"/>
        </LinearLayout>

    <Button
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/register_btn"
        android:textColor="@color/black"
        android:backgroundTint="@color/trinity"
        android:id="@+id/btnRegister"/>



</LinearLayout>